--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <nav class="navigation">
       <div class="section-border"></div>
       <div class="nav-items">
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Projects</a>
-        <a href="">Services</a>
-        <a href="">Gallery</a>
-        <a href="">Blog</a>
-        <a href="">Pricing</a>
-        <a href="">Contact</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Services</a>
+        <a href="#">Gallery</a>
+        <a href="#">Blog</a>
+        <a href="#">Pricing</a>
+        <a href="#">Contact</a>
       </div>
     </nav>
   </div>
