Landing section container markup and styles

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <a href="#">Contact</a>
       </div>
     </nav>
+
+    <section class="landing">
+      <h1>Landing</h1>
+    </section>
   </div>
   <script src="./script.js"></script>
 </body>
