Landing heading and logo markup.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     </nav>
 
     <section class="landing">
-      <h1>Landing</h1>
+      <h1 class="section-bg-heading">NimiriaTech</h1>
+      <div class="logo">
+        <span>Code</span>
+        <span>Devs</span>
+      </div>
     </section>
   </div>
   <script src="./script.js"></script>
