--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <section class="landing">
-      <h1 class="landing-heading">NimiriaTech</h1>
+      <h1 class="section-bg-heading">NimiriaTech</h1>
       <div class="logo">
         <span>Code</span>
         <span>Devs</span>
