--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </nav>
 
     <section class="landing">
-      <h1 class="section-bg-heading">NimiriaTech</h1>
+      <h1 class="section-bg-heading">Coding Odyssey</h1>
       <div class="logo">
-        <span>Code</span>
-        <span>Devs</span>
+        <span>Nimira</span>
+        <span>Tech</span>
       </div>
     </section>
   </div>
