--- a/index.html
+++ b/index.html
@@ -36,7 +36,46 @@
         <span>Nimira</span>
         <span>Tech</span>
       </div>
+      
+      <div class="banner">
+        <div class="section-border"></div>
+        <div class="developer-info">
+          <h3 class="greeting">
+            Welcome, we are     
+          </h3>
+          <h1 class="name">
+            <span>Nimira</span>
+            <span>Tech</span>
+          </h1>
+          <h3 class="phase">Full Stack Coders</h3>
+          <p class="about">We are a dynamic team of full-stack developers, crafting exceptional digital experiences through innovative coding,
+          cutting-edge solutions, and unmatched creativity.</p>
+          <div class="social-media">
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-discord"></i>
+            <i class="fa-brands fa-twitch"></i>
+          </div>
+          <div class="newsletter">
+            <button type="button" class="btn newsletter-btn">Newsletter</button>
+            <span>Latest News</span>
+          </div>
+        </div>
+        <div class="developer-img">
+          <div class="dev-img-wrapper">
+            <img src="./images/developer.png" alt="dragon image">
+          </div>
+          <div class="dev-experience dev-work">
+            <span>4</span>
+            <span>years of experience</span>
+          </div>
+          <div class="dev-projects dev-work">
+            <span>52</span>
+            <span>completed projects</span>
+          </div>
+        </div>
+      </div>
     </section>
+    
   </div>
   <script src="./script.js"></script>
 </body>
