Baanner sub container styled.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span>Nimira</span>
             <span>Tech</span>
           </h1>
-          <h3 class="phase">Full Stack Coders</h3>
+          <h3 class="profession">Full Stack Coders</h3>
           <p class="about">We are a dynamic team of full-stack developers, crafting exceptional digital experiences through innovative coding,
           cutting-edge solutions, and unmatched creativity.</p>
           <div class="social-media">
