Updated dev work styling. Styled dev-upcoming and dev-firedrake.

--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
           <div class="dev-img-wrapper">
             <img src="./images/developer.png" alt="dragon image">
           </div>
-          <div class="dev-experience dev-work">
-            <span>4</span>
-            <span>years of experience</span>
+          <div class="dev-upcoming dev-work">
+            <span>Upcoming...</span>
           </div>
-          <div class="dev-projects dev-work">
-            <span>52</span>
-            <span>completed projects</span>
+          <div class="dev-firedrake dev-work">
+            <span>Firedrake</span>
           </div>
         </div>
       </div>
