Styled text elements of the developer info section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="section-border"></div>
         <div class="developer-info">
           <h3 class="greeting">
-            Welcome, we are     
+            Welcome to     
           </h3>
           <h1 class="name">
             <span>Nimira</span>
