Button hover effect.Tweaks and corrections.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <i class="fa-brands fa-discord"></i>
             <i class="fa-brands fa-twitch"></i>
           </div>
-          <div class="newsletter">
-            <button type="button" class="btn newsletter-btn">Newsletter</button>
+          <div>
+            <button type="button" class="btn">Newsletter</button>
             <span>Latest News</span>
           </div>
         </div>
