Completed the skills section.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,56 @@
       </div>
     </section>
     
+    <section class="skills">
+      <h1 class="section-bg-heading">Expertise</h1>
+      <h1 class="section-heading">Section Heading</h1>
+      <h3 class="sub-heading">Sub Heading</h3>
+      <div class="section-border"></div>
+      <div class="skills-cards">
+        <div class="skills-card">
+          <div class="skill">
+            <span>Frontend</span>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
+          <div class="skills-card-progress"></div>
+        </div>  
+        <div class="skills-card">
+          <div class="skill">
+            <span>Backend</span>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
+          <div class="skills-card-progress"></div>
+        </div>  
+        <div class="skills-card">
+          <div class="skill">
+            <span>Game Development</span>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
+          <div class="skills-card-progress"></div>
+        </div>  
+        <div class="skills-card">
+          <div class="skill">
+            <span>Machine Learning</span>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
+          <div class="skills-card-progress"></div>
+        </div>  
+        <div class="skills-card">
+          <div class="skill">
+            <span>Dotnet</span>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
+          <div class="skills-card-progress"></div>
+        </div>  
+        <div class="skills-card">
+          <div class="skill">
+            <span>Full Stack</span>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
+          <div class="skills-card-progress"></div>
+        </div>  
+      </div>
+    </section>
   </div>
   <script src="./script.js"></script>
 </body>
