Making some big changes to the project as it stands - getting rid of section-border completely and making logo a lot simpler.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="line line-2"></div>
     </div>
     <nav class="navigation">
-      <div class="section-border"></div>
+      <!-- <div class="section-border"></div> -->
       <div class="nav-items">
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -33,12 +33,13 @@
     <section class="landing">
       <h1 class="section-bg-heading">Coding Odyssey</h1>
       <div class="logo">
-        <span>Nimira</span>
-        <span>Tech</span>
+        <!-- <span>Nimira</span>
+        <span>Tech</span> -->
+        <i class="fa-solid fa-code"></i>
       </div>
       
       <div class="banner">
-        <div class="section-border"></div>
+        <!-- <div class="section-border"></div> -->
         <div class="developer-info">
           <h3 class="greeting">
             Welcome to     
@@ -72,7 +73,7 @@
       <h1 class="section-bg-heading">Expertise</h1>
       <h1 class="section-heading">Section Heading</h1>
       <h3 class="sub-heading">Sub Heading</h3>
-      <div class="section-border"></div>
+      <!-- <div class="section-border"></div> -->
       <div class="skills-cards">
         <div class="skills-card">
           <div class="skill">
