--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" href="./images/billy.png">
   <link rel="stylesheet" href="./styles.css">
-  <title>Portfolio Website</title>
+  <title>Odyssey Tech</title>
 </head>
 <body>
   <div class="container">
@@ -17,7 +17,6 @@
       <div class="line line-2"></div>
     </div>
     <nav class="navigation">
-      <!-- <div class="section-border"></div> -->
       <div class="nav-items">
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -31,21 +30,18 @@
     </nav>
 
     <section class="landing">
-      <h1 class="section-bg-heading">Coding Odyssey</h1>
+      <h1 class="section-bg-heading">A Coding Odyssey</h1>
       <div class="logo">
-        <!-- <span>Nimira</span>
-        <span>Tech</span> -->
         <i class="fa-solid fa-code"></i>
       </div>
       
       <div class="banner">
-        <!-- <div class="section-border"></div> -->
         <div class="developer-info">
           <h3 class="greeting">
             Welcome to     
           </h3>
           <h1 class="name">
-            <span>Nimira</span>
+            <span>Odyssey</span>
             <span>Tech</span>
           </h1>
           <h3 class="profession">Full Stack Coders</h3>
@@ -73,7 +69,6 @@
       <h1 class="section-bg-heading">Expertise</h1>
       <h1 class="section-heading">Section Heading</h1>
       <h3 class="sub-heading">Sub Heading</h3>
-      <!-- <div class="section-border"></div> -->
       <div class="skills-cards">
         <div class="skills-card">
           <div class="skill">
