Getting rid of sub heading. Tweaks made elsewhere.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     
     <section class="skills">
       <h1 class="section-bg-heading">Expertise</h1>
-      <h1 class="section-heading">Section Heading</h1>
-      <h3 class="sub-heading">Sub Heading</h3>
+      <h1 class="section-heading">What We Do</h1>
       <div class="skills-cards">
         <div class="skills-card">
           <div class="skill">
@@ -97,7 +96,7 @@
         </div>  
         <div class="skills-card">
           <div class="skill">
-            <span>Dotnet</span>
+            <span>.Net</span>
           </div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quod officiis quibusdam, necessitatibus architecto magnam.</p>
           <div class="skills-card-progress"></div>
