Image assets brought in. Starting on projects section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
         </div>  
       </div>
     </section>
+    <section class="projects">
+      <h1 class="section-bg-heading">Our Products</h1>
+      <div class="projects-cards">
+        <div class="project-card"></div>
+      </div>
+    </section>
   </div>
   <script src="./script.js"></script>
 </body>
