--- a/index.html
+++ b/index.html
@@ -113,7 +113,17 @@
     <section class="projects">
       <h1 class="section-bg-heading">Our Products</h1>
       <div class="projects-cards">
-        <div class="project-card"></div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Knight-Coders.png" alt="">
+          </div>
+          <div class="techs">
+            <span>Knight Coders</span>
+          </div>
+          <h3 class="project-name">Knight Coders</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <button type="button" class="project-btn">View Product</button>
+        </div>
       </div>
     </section>
   </div>
