--- a/index.html
+++ b/index.html
@@ -115,12 +115,72 @@
       <div class="projects-cards">
         <div class="project-card">
           <div class="project-img">
-            <img src="./images/Knight-Coders.png" alt="">
+            <img src="./images/Knight-Coders.png">
           </div>
           <div class="techs">
             <span>Knight Coders</span>
           </div>
           <h3 class="project-name">Knight Coders</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <button type="button" class="project-btn">View Product</button>
+        </div>
+      </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Markadr.png">
+          </div>
+          <div class="techs">
+            <span>Markaðr</span>
+          </div>
+          <h3 class="project-name">Markaðr</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <button type="button" class="project-btn">View Product</button>
+        </div>
+      </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Vita.png">
+          </div>
+          <div class="techs">
+            <span>Vita</span>
+          </div>
+          <h3 class="project-name">Vita</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <button type="button" class="project-btn">View Product</button>
+        </div>
+      </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/The-Wraith.png" alt="">
+          </div>
+          <div class="techs">
+            <span>The Wraith</span>
+          </div>
+          <h3 class="project-name">The Wraith</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <button type="button" class="project-btn">View Product</button>
+        </div>
+      </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/Runestone.png" alt="">
+          </div>
+          <div class="techs">
+            <span>Runestone</span>
+          </div>
+          <h3 class="project-name">Runestone</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <button type="button" class="project-btn">View Product</button>
+        </div>
+      </div>
+        <div class="project-card">
+          <div class="project-img">
+            <img src="./images/The-Labyrinth.png" alt="">
+          </div>
+          <div class="techs">
+            <span>The Labyrinth</span>
+          </div>
+          <h3 class="project-name">The Labyrinth</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
