Styled project-img sub container and img

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
+      <div class="section-border"></div>
     </section>
   </div>
   <script src="./script.js"></script>
