--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <span>Knight Coders</span>
           </div>
           <h3 class="project-name">Knight Coders</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fugclassName="project-description"a, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
@@ -133,7 +133,7 @@
             <span>Markaðr</span>
           </div>
           <h3 class="project-name">Markaðr</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
@@ -145,7 +145,7 @@
             <span>Vita</span>
           </div>
           <h3 class="project-name">Vita</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
@@ -157,7 +157,7 @@
             <span>The Wraith</span>
           </div>
           <h3 class="project-name">The Wraith</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
@@ -169,7 +169,7 @@
             <span>Runestone</span>
           </div>
           <h3 class="project-name">Runestone</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
@@ -181,7 +181,7 @@
             <span>The Labyrinth</span>
           </div>
           <h3 class="project-name">The Labyrinth</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
       </div>
