CSS tweaks made.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </section>
     <section class="projects">
-      <h1 class="section-bg-heading">Our Products</h1>
+      <h1 class="section-heading">Our Recent Projects</h1>
       <div class="projects-cards">
         <div class="project-card">
           <div class="project-img">
