Updating HTML. Project button styled. Other tweaks made.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <span>Knight Coders</span>
           </div>
           <h3 class="project-name">Knight Coders</h3>
-          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fugclassName="project-description"a, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
+          <p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur ullam, fuga, autem reiciendis adipisci deleniti sint in modi obcaecati, quam fugiat unde iure aut alias!</p>
           <button type="button" class="project-btn">View Product</button>
         </div>
         <div class="project-card">
