--- a/index.html
+++ b/index.html
@@ -182,6 +182,32 @@
       </div>
       <div class="section-border"></div>
     </section>
+    <section class="contact">
+      <h1 class="section-heading">Contact Us</h1>
+      <div class="contact-content">
+        <div class="contact-left">
+          <div class="address">
+            <i class="fa-solid fa-location-dot"></i>
+            <div class="contact-info">
+              <span>Address:</span>
+              <span>1 High Street, Leeds, England</span>
+            </div>
+            <div class="contact-info">
+              <span>Email:</span>
+              <span>enquiries@odessey-tech.com</span>
+            </div>
+            <div class="contact-info">
+              <span>Phone:</span>
+              <span>(+44) 0113 123 4567</span>
+            </div>
+            <div class="contact-info">
+              <span>:Twitch</span>
+              <span>https://www.twitch.tv/odesseytech</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   <script src="./script.js"></script>
 </body>
