--- a/index.html
+++ b/index.html
@@ -206,6 +206,21 @@
             </div>
           </div>
         </div>
+        <div class="contact-right">
+          <form>
+            <div class="input-groups">
+              <div class="input-group">
+                <label for="name">Name</label>
+                <input type="text">
+              </div>
+              <div class="input-group">
+                <label for="name">Name</label>
+                <input type="text">
+              </div>
+            </div>
+
+          </form>
+        </div>
       </div>
     </section>
   </div>
