--- a/index.html
+++ b/index.html
@@ -210,15 +210,31 @@
           <form>
             <div class="input-groups">
               <div class="input-group">
-                <label for="name">Name</label>
+                <label for="name">Name
+                  <i class="fa-solid fa-user"></i>
+                </label>
                 <input type="text">
               </div>
               <div class="input-group">
-                <label for="name">Name</label>
+                <label for="email">Email
+                  <i class="fa-solid fa-envelope"></i>
+                </label>
                 <input type="text">
               </div>
             </div>
-
+            <div class="input-group">
+              <label for="subject">Enquiry
+                <i class="fa-solid fa-question"></i>
+              </label>
+              <input type="text">
+            </div>
+            <div class="input-group">
+              <label for="text">Message
+                <i class="fa-solid fa-comment"></i>
+              </label>
+              <textarea></textarea>
+            </div>
+            <button type="button" class="contact-btn">Send Message</button>
           </form>
         </div>
       </div>
