--- a/index.html
+++ b/index.html
@@ -239,6 +239,20 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="icons">
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-discord"></i>
+        <i class="fa-brands fa-twitch"></i>
+      </div>
+      <div class="copyright">
+        <p>Odyssey Tech &copy; 2025. All Rights Reserved.
+        </p>
+      </div>
+      <div class="author">
+        <p>Designed by NimiraTech</p>
+      </div>
+    </footer>
   </div>
   <script src="./script.js"></script>
 </body>
