Contact markup corrected.

--- a/index.html
+++ b/index.html
@@ -192,19 +192,28 @@
               <span>Address:</span>
               <span>1 High Street, Leeds, England</span>
             </div>
+          </div>
+          <div class="email">
+            <i class="fa-solid fa-envelope"></i>
             <div class="contact-info">
               <span>Email:</span>
               <span>enquiries@odessey-tech.com</span>
             </div>
+          </div>
+          <div class="phone">
+            <i class="fa-solid fa-phone"></i>
             <div class="contact-info">
               <span>Phone:</span>
               <span>(+44) 0113 123 4567</span>
             </div>
+          </div> 
+          <div class="twitch">
+            <i class="fa-solid fa-phone"></i>
             <div class="contact-info">
-              <span>:Twitch</span>
+              <span>Twitch</span>
               <span>https://www.twitch.tv/odesseytech</span>
             </div>
-          </div>
+          </div>  
         </div>
         <div class="contact-right">
           <form>
